--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 STRING_CONEXAO = mongodb+srv://mboihagian:HuosMdUXmT7CQvu5@cluster0.h71go.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+GEMINI_API_KEY = AIzaSyC9taFlf15OWz0C4X3rgB6m0XrJa_g9lIs
